--- a/notebooks/prcp-extreme-local.ipynb
+++ b/notebooks/prcp-extreme-local.ipynb
@@ -29,9 +29,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "$.getScript('https://kmahelona.github.io/ipython_notebook_goodies/ipython_notebook_toc.js')"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%javascript\n",
     "$.getScript('https://kmahelona.github.io/ipython_notebook_goodies/ipython_notebook_toc.js')"
@@ -43,7 +56,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import datalab.bigquery as bq\n",
     "import seaborn as sns\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -54,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color:blue;\">Criando o dataset para treinamento e validação</h2>"
+    "<h2 style=\"color:blue;\">Importando o dataset para treinamento e validação</h2>"
    ]
   },
   {
@@ -68,80 +80,333 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0.16</th>\n",
+       "      <th>619760</th>\n",
+       "      <th>-15.883</th>\n",
+       "      <th>54.517</th>\n",
+       "      <th>01</th>\n",
+       "      <th>07</th>\n",
+       "      <th>2015</th>\n",
+       "      <th>76.6</th>\n",
+       "      <th>71.4</th>\n",
+       "      <th>1016.4</th>\n",
+       "      <th>...</th>\n",
+       "      <th>73.2</th>\n",
+       "      <th>G</th>\n",
+       "      <th>999.9.2</th>\n",
+       "      <th>0</th>\n",
+       "      <th>0.1</th>\n",
+       "      <th>0.2</th>\n",
+       "      <th>0.3</th>\n",
+       "      <th>0.4</th>\n",
+       "      <th>0.5</th>\n",
+       "      <th>0.6</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.75</td>\n",
+       "      <td>619760</td>\n",
+       "      <td>-15.883</td>\n",
+       "      <td>54.517</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>73.3</td>\n",
+       "      <td>1013.7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>G</td>\n",
+       "      <td>999.9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.00</td>\n",
+       "      <td>619760</td>\n",
+       "      <td>-15.883</td>\n",
+       "      <td>54.517</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>77.6</td>\n",
+       "      <td>70.6</td>\n",
+       "      <td>1017.2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>I</td>\n",
+       "      <td>999.9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.00</td>\n",
+       "      <td>619760</td>\n",
+       "      <td>-15.883</td>\n",
+       "      <td>54.517</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>76.9</td>\n",
+       "      <td>69.5</td>\n",
+       "      <td>1018.8</td>\n",
+       "      <td>...</td>\n",
+       "      <td>73.4</td>\n",
+       "      <td>I</td>\n",
+       "      <td>999.9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.00</td>\n",
+       "      <td>619760</td>\n",
+       "      <td>-15.883</td>\n",
+       "      <td>54.517</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>78.3</td>\n",
+       "      <td>70.2</td>\n",
+       "      <td>1018.1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>76.3</td>\n",
+       "      <td>G</td>\n",
+       "      <td>999.9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.71</td>\n",
+       "      <td>619760</td>\n",
+       "      <td>-15.883</td>\n",
+       "      <td>54.517</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>77.2</td>\n",
+       "      <td>73.8</td>\n",
+       "      <td>1013.7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>75.2</td>\n",
+       "      <td>G</td>\n",
+       "      <td>999.9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.24</td>\n",
+       "      <td>619760</td>\n",
+       "      <td>-15.883</td>\n",
+       "      <td>54.517</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>73.9</td>\n",
+       "      <td>66.2</td>\n",
+       "      <td>1019.7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>70.9</td>\n",
+       "      <td>G</td>\n",
+       "      <td>999.9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1.30</td>\n",
+       "      <td>619760</td>\n",
+       "      <td>-15.883</td>\n",
+       "      <td>54.517</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>79.7</td>\n",
+       "      <td>74.2</td>\n",
+       "      <td>1013.3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>76.8</td>\n",
+       "      <td>G</td>\n",
+       "      <td>999.9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.16</td>\n",
+       "      <td>619760</td>\n",
+       "      <td>-15.883</td>\n",
+       "      <td>54.517</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>77.7</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>1019.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>76.3</td>\n",
+       "      <td>E</td>\n",
+       "      <td>999.9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.04</td>\n",
+       "      <td>619760</td>\n",
+       "      <td>-15.883</td>\n",
+       "      <td>54.517</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>77.9</td>\n",
+       "      <td>71.3</td>\n",
+       "      <td>1020.5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>75.2</td>\n",
+       "      <td>A</td>\n",
+       "      <td>999.9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.04</td>\n",
+       "      <td>619760</td>\n",
+       "      <td>-15.883</td>\n",
+       "      <td>54.517</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>79.4</td>\n",
+       "      <td>73.5</td>\n",
+       "      <td>1013.1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>75.9</td>\n",
+       "      <td>G</td>\n",
+       "      <td>999.9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   0.16  619760  -15.883  54.517  01  07  2015  76.6  71.4  1016.4 ...   73.2  \\\n",
+       "0  0.75  619760  -15.883  54.517   1   6  2015  79.0  73.3  1013.7 ...   73.0   \n",
+       "1  0.00  619760  -15.883  54.517   1   8  2015  77.6  70.6  1017.2 ...   75.0   \n",
+       "2  0.00  619760  -15.883  54.517   2   8  2015  76.9  69.5  1018.8 ...   73.4   \n",
+       "3  0.00  619760  -15.883  54.517   2   7  2015  78.3  70.2  1018.1 ...   76.3   \n",
+       "4  0.71  619760  -15.883  54.517   2   6  2015  77.2  73.8  1013.7 ...   75.2   \n",
+       "5  0.24  619760  -15.883  54.517   3   8  2015  73.9  66.2  1019.7 ...   70.9   \n",
+       "6  1.30  619760  -15.883  54.517   3   6  2015  79.7  74.2  1013.3 ...   76.8   \n",
+       "7  0.16  619760  -15.883  54.517   3   7  2015  77.7  72.0  1019.5 ...   76.3   \n",
+       "8  0.04  619760  -15.883  54.517   4   7  2015  77.9  71.3  1020.5 ...   75.2   \n",
+       "9  0.04  619760  -15.883  54.517   4   6  2015  79.4  73.5  1013.1 ...   75.9   \n",
+       "\n",
+       "   G  999.9.2  0  0.1  0.2  0.3 0.4  0.5  0.6  \n",
+       "0  G    999.9  0    0    0    0   0    0    1  \n",
+       "1  I    999.9  0    0    0    0   0    0    2  \n",
+       "2  I    999.9  0    0    0    0   0    0    3  \n",
+       "3  G    999.9  0    0    0    0   0    0    4  \n",
+       "4  G    999.9  0    0    0    0   0    0    5  \n",
+       "5  G    999.9  0    0    0    0   0    0    6  \n",
+       "6  G    999.9  0    0    0    0   0    0    7  \n",
+       "7  E    999.9  0    0    0    0   0    0    8  \n",
+       "8  A    999.9  0    0    0    0   0    0    9  \n",
+       "9  G    999.9  0    0    0    0   0    0   10  \n",
+       "\n",
+       "[10 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def create_query(year):\n",
-    "  base_query = \"\"\"\n",
-    "       SELECT    d.stn\n",
-    "                 ,ws.lat\n",
-    "                 ,ws.lon\n",
-    "                 ,d.da \n",
-    "                 ,d.mo\n",
-    "                 ,d.year \n",
-    "                 ,d.temp\n",
-    "                 ,d.dewp\n",
-    "                 ,d.slp\n",
-    "                 ,d.stp\n",
-    "                 ,d.visib\n",
-    "                 ,d.wdsp\n",
-    "                 ,d.mxpsd\n",
-    "                 ,d.gust\n",
-    "                 ,d.max\n",
-    "                 ,d.min\n",
-    "                 ,d.prcp\n",
-    "                 ,d.flag_prcp\n",
-    "                 ,d.sndp\n",
-    "                 ,d.fog\n",
-    "                 ,d.rain_drizzle\n",
-    "                 ,d.snow_ice_pellets\n",
-    "                 ,d.hail\n",
-    "                 ,d.thunder\n",
-    "                 ,d.tornado_funnel_cloud\n",
-    "          FROM \n",
-    "            [bigquery-public-data:noaa_gsod.gsod{0}] d\n",
-    "            JOIN [bigquery-public-data:noaa_gsod.stations] ws\n",
-    "              ON d.stn = ws.usaf\n",
-    "              and d.wban = ws.wban\n",
-    "          where ws.state is not null\n",
-    "              and ws.country = 'US'\n",
-    "              and INTEGER(d.mo) in (6,7,8)\n",
-    "          order by d.stn, d.da\n",
-    "    \"\"\"\n",
-    "  query = base_query.format(year)\n",
-    "  return query\n",
-    "\n",
-    "df = pd.DataFrame([])\n",
-    "\n",
-    "for y in range(2015,2016):\n",
-    "  r = bq.Query(create_query(y)).to_dataframe()\n",
-    "  df = df.append(r)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<p>Salvando os dados</p>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def to_csv(df, filename, target):\n",
-    "  outdf = df.copy(deep=False)\n",
-    "  outdf.loc[:, 'key'] = np.arange(0, len(outdf)) # rownumber as key\n",
-    "  # reorder columns so that target is first column\n",
-    "  cols = outdf.columns.tolist()\n",
-    "  cols.remove(target)\n",
-    "  cols.insert(0, target)\n",
-    "  #print (cols)  # new order of columns\n",
-    "  outdf = outdf[cols]\n",
-    "  outdf.to_csv(filename, header=False, index_label=False, index=False)\n",
-    "\n",
-    "to_csv(df, '../data/prcp-data-2015.csv','d_prcp')"
+    "df = pd.read_csv('../data/prcp-data-2015.csv')\n",
+    "df[:10]"
    ]
   },
   {
